Fix for broken anchor links for spanish fixes #26

--- a/guides/es/essentials/condition-sets/introduction.mdx
+++ b/guides/es/essentials/condition-sets/introduction.mdx
@@ -6,7 +6,7 @@ icon: "book-open"
 
 ## ¿Qué es un conjunto de condiciones?
 
-Un **conjunto de condiciones** es un grupo de condiciones predefinidas que se pueden usar para controlar cuándo debe ejecutarse una regla de checkout. Estas condiciones están disponibles en el selector [Cuándo](/guides/es/get-started/concepts#conditions-the-"when") en la configuración de la regla.
+Un **conjunto de condiciones** es un grupo de condiciones predefinidas que se pueden usar para controlar cuándo debe ejecutarse una regla de checkout. Estas condiciones están disponibles en el selector [Cuándo](/guides/es/get-started/concepts#condiciones-el-cuándo) en la configuración de la regla.
 
 Cada conjunto de condiciones muestra cuántas condiciones están disponibles en él comparado con el total. Por ejemplo, **Conjunto de condiciones 1** `22 / 143` significa que hay 22 condiciones disponibles en el Conjunto de condiciones 1 de un total de 143 condiciones. Aquí, 143 es el número total de condiciones disponibles en todos los conjuntos de condiciones.
 
@@ -21,7 +21,7 @@ Cada conjunto de condiciones muestra cuántas condiciones están disponibles en 
   para encontrar una condición específica.
 </Info>
 
-Las condiciones del **conjunto de condiciones** seleccionado aparecen en el selector [Cuándo](/guides/es/get-started/concepts#conditions-the-"when") de abajo dentro del [bloque](/guides/es/get-started/concepts#block) de regla. Puedes cambiar entre conjuntos de condiciones y luego abrir el selector de condiciones en el selector "Cuándo" de abajo, para ver las condiciones disponibles en el conjunto de condiciones seleccionado.
+Las condiciones del **conjunto de condiciones** seleccionado aparecen en el selector [Cuándo](/guides/es/get-started/concepts#condiciones-el-cuándo) de abajo dentro del [bloque](/guides/es/get-started/concepts#bloque) de regla. Puedes cambiar entre conjuntos de condiciones y luego abrir el selector de condiciones en el selector "Cuándo" de abajo, para ver las condiciones disponibles en el conjunto de condiciones seleccionado.
 
 > Por ejemplo, aquí estamos usando el **Conjunto de condiciones 1** predeterminado, que tiene 22 condiciones disponibles, configurando la regla para ejecutarse si el **Total del pedido** es mayor o igual a **$50** y el **País de envío** es **Estados Unidos**, ya que estas condiciones están disponibles en el Conjunto de condiciones 1.
 
