--- a/guides/es/essentials/shipping/rename-shipping-methods.mdx
+++ b/guides/es/essentials/shipping/rename-shipping-methods.mdx
@@ -16,7 +16,7 @@ Los siguientes pasos muestran cómo crear y configurar una regla **Renombrar Mé
 
 ### Crear una nueva regla
 
-Desde tu [admin de Shopify](/guides/es/get-started/installation#go-to-the-app), abre la aplicación. En la barra lateral, ve a la sección [Reglas](/guides/es/get-started/quickstart#create-a-sample-rule) y haz clic en _"Crear Regla"_.
+Desde tu [admin de Shopify](/guides/es/get-started/installation#ir-a-la-aplicación), abre la aplicación. En la barra lateral, ve a la sección [Reglas](/guides/es/get-started/quickstart#crear-una-regla-de-ejemplo) y haz clic en _"Crear Regla"_.
 
 Luego, serás redirigido a la pantalla **Seleccionar tipo de regla de checkout**. Elige _categoría "Envío" → selecciona tipo de regla de checkout "Renombrar Métodos de Envío" → haz clic en "Seleccionar Regla"_.
 
@@ -29,7 +29,7 @@ A continuación, llegarás a la pantalla **Crear nueva regla de renombrar métod
 
 ### Configuración de regla
 
-Para configurar la regla, primero opcionalmente podemos añadir un nombre como "Renombrar métodos de envío" para describir lo que hace. Luego, selecciona el [estado](/guides/es/get-started/concepts#status) de la regla: Prueba, Activo o Desactivado.
+Para configurar la regla, primero opcionalmente podemos añadir un nombre como "Renombrar métodos de envío" para describir lo que hace. Luego, selecciona el [estado](/guides/es/get-started/concepts#estado) de la regla: Prueba, Activo o Desactivado.
 
 Aquí vamos a elegir el estado **Prueba**, para que podamos probar rápidamente la regla sin afectar el checkout para clientes reales.
 
@@ -38,7 +38,7 @@ Aquí vamos a elegir el estado **Prueba**, para que podamos probar rápidamente 
   alt="Rule Configure 1"
 />
 
-A continuación, en la misma pantalla, selecciona el [Objetivo](/guides/es/get-started/concepts#target) apropiado para definir dónde debe aplicarse la regla. Podemos elegir _"Envío"_ para renombrar métodos de envío mostrados después de que se ingresa una **dirección de envío**. Luego, podemos seleccionar:
+A continuación, en la misma pantalla, selecciona el [Objetivo](/guides/es/get-started/concepts#objetivo) apropiado para definir dónde debe aplicarse la regla. Podemos elegir _"Envío"_ para renombrar métodos de envío mostrados después de que se ingresa una **dirección de envío**. Luego, podemos seleccionar:
 
 - **Todos los envíos excepto suscripciones** – aplica la regla solo a envíos regulares y omite cualquier pedido que contenga productos de suscripción. Esto es útil, ya que Shopify puede elegir automáticamente el método de envío más barato para productos de suscripción y ocultar todos los otros métodos de envío. Ocultar este método de envío más barato puede causar el error "no hay envío disponible". Por eso recomendamos usar esta opción si tienes productos de suscripción para evitar este error.
 
@@ -51,7 +51,7 @@ La opción de _"Recogida"_ no está disponible para este tipo de regla en este m
   alt="Select Target"
 />
 
-A continuación, en la misma pantalla, selecciona el [conjunto de condiciones](/guides/es/get-started/concepts#condition-set), [condición](/guides/es/get-started/concepts#conditions-when) y [acción](/guides/es/get-started/concepts#action-what) relevantes.
+A continuación, en la misma pantalla, selecciona el [conjunto de condiciones](/guides/es/get-started/concepts#conjunto-de-condiciones), [condición](/guides/es/get-started/concepts#condiciones-el-cuándo) y [acción](/guides/es/get-started/concepts#acción-el-qué) relevantes.
 
 > Como ejemplo, estamos usando el **Conjunto de condiciones 1**, configurando la regla para ejecutarse **Siempre**, y configurándola para renombrar métodos de envío que contengan **"International Shipping"** a **"Local Shipping"**.
 
@@ -97,7 +97,7 @@ Haz clic en **Reglas** en la barra lateral para ver todas las reglas. Selecciona
 <Warning>
   La activación de reglas solo está disponible en planes pagos. Si no has actualizado tu
   plan aún, sigue las instrucciones
-  [aquí](/guides/es/get-started/installation#upgrade-your-plan) para actualizar.
+  [aquí](/guides/es/get-started/installation#actualizar-tu-plan) para actualizar.
 </Warning>
 <img
   src="/images/essentials/shipping/activate-the-rule-rename-shipping-methods.webp"
