--- a/guides/es/essentials/validation/validate-block-checkout.mdx
+++ b/guides/es/essentials/validation/validate-block-checkout.mdx
@@ -16,7 +16,7 @@ Los siguientes pasos muestran cómo crear y configurar una regla **Validar/Bloqu
 
 ### Crear una nueva regla
 
-Desde tu [admin de Shopify](/guides/es/get-started/installation#go-to-the-app), abre la aplicación. En la barra lateral, ve a la sección [Reglas](/guides/es/get-started/quickstart#create-a-sample-rule) y haz clic en _"Crear Regla"_.
+Desde tu [admin de Shopify](/guides/es/get-started/installation#ir-a-la-aplicación), abre la aplicación. En la barra lateral, ve a la sección [Reglas](/guides/es/get-started/quickstart#crear-una-regla-de-ejemplo) y haz clic en _"Crear Regla"_.
 
 Luego, serás redirigido a la pantalla **Seleccionar tipo de regla de checkout**. Elige _categoría "Validación" → selecciona tipo de regla de checkout "Validar/Bloquear Checkout" → haz clic en "Seleccionar Regla"_.
 
@@ -29,7 +29,7 @@ A continuación, llegarás a la pantalla **Crear nueva regla de validar/bloquear
 
 ### Configuración de regla
 
-Para configurar la regla, primero opcionalmente podemos añadir un nombre como "Validar/bloquear checkout" para describir lo que hace. Luego, selecciona el [estado](/guides/es/get-started/concepts#status) de la regla: Prueba, Activo o Desactivado.
+Para configurar la regla, primero opcionalmente podemos añadir un nombre como "Validar/bloquear checkout" para describir lo que hace. Luego, selecciona el [estado](/guides/es/get-started/concepts#estado) de la regla: Prueba, Activo o Desactivado.
 
 Aquí vamos a elegir el estado **Prueba**, para que podamos probar rápidamente la regla sin afectar el checkout para clientes reales.
 
@@ -38,7 +38,7 @@ Aquí vamos a elegir el estado **Prueba**, para que podamos probar rápidamente 
   alt="Rule Configure 1"
 />
 
-A continuación, en la misma pantalla, selecciona al menos una opción bajo [Activar esta regla](/guides/es/get-started/concepts#trigger). Puedes elegir **Interactuando con el checkout**, que ejecuta la regla mientras el cliente está en el proceso de checkout, y **Completando el checkout** que ejecuta la regla cuando el cliente termina el checkout. Por defecto, debes seleccionar ambas opciones para asegurar que la regla siempre se ejecute cuando necesita hacerlo.
+A continuación, en la misma pantalla, selecciona al menos una opción bajo [Activar esta regla](/guides/es/get-started/concepts#disparador). Puedes elegir **Interactuando con el checkout**, que ejecuta la regla mientras el cliente está en el proceso de checkout, y **Completando el checkout** que ejecuta la regla cuando el cliente termina el checkout. Por defecto, debes seleccionar ambas opciones para asegurar que la regla siempre se ejecute cuando necesita hacerlo.
 
 <Info>
   Si no estás seguro sobre qué elegir para cualquier configuración de regla, muchas veces la
@@ -48,7 +48,7 @@ A continuación, en la misma pantalla, selecciona al menos una opción bajo [Act
 
 <img src="/images/concepts/trigger.webp" alt="Trigger" />
 
-A continuación, en la misma pantalla, selecciona el [conjunto de condiciones](/guides/es/get-started/concepts#condition-set), [condición](/guides/es/get-started/concepts#conditions-when) y [acción](/guides/es/get-started/concepts#action-what) relevantes.
+A continuación, en la misma pantalla, selecciona el [conjunto de condiciones](/guides/es/get-started/concepts#conjunto-de-condiciones), [condición](/guides/es/get-started/concepts#condiciones-el-cuándo) y [acción](/guides/es/get-started/concepts#acción-el-qué) relevantes.
 
 > Como ejemplo, aquí estamos usando el **Conjunto de condiciones 1** predeterminado, configurando la regla para activarse cuando el campo **"Línea de dirección 2 (Apartamento, suite, etc)"** esté **vacío**, y configurándola para bloquear el checkout. El mensaje de error **"Ingresa dirección completa"** se mostrará bajo el campo **Línea de dirección 2** en el checkout, requiriendo que los clientes proporcionen su dirección completa antes de proceder.
 
@@ -121,7 +121,7 @@ Haz clic en **Reglas** en la barra lateral para ver todas las reglas. Selecciona
 <Warning>
   La activación de reglas solo está disponible en planes pagos. Si no has actualizado tu
   plan aún, sigue las instrucciones
-  [aquí](/guides/es/get-started/installation#upgrade-your-plan) para actualizar.
+  [aquí](/guides/es/get-started/installation#actualizar-tu-plan) para actualizar.
 </Warning>
 
 <img
