--- a/guides/es/get-started/introduction.mdx
+++ b/guides/es/get-started/introduction.mdx
@@ -26,14 +26,14 @@ Comienza con BeSure Checkout Rules en unos pocos pasos simples. Los pasos a cont
   <Card
     title="Instalar la aplicación"
     icon="download"
-    href="/guides/es/get-started/installation#install-app"
+    href="/guides/es/get-started/installation#instalar-aplicación"
   >
     Añade BeSure Checkout Rules a tu tienda Shopify desde la App Store.
   </Card>
   <Card
     title="Abrir aplicación en admin"
     icon="gear"
-    href="/guides/es/get-started/installation#go-to-the-app"
+    href="/guides/es/get-started/installation#ir-a-la-aplicación"
   >
     Accede a la aplicación desde tu admin de Shopify para comenzar a configurar tu
     lógica de checkout.
@@ -48,7 +48,7 @@ Comienza con BeSure Checkout Rules en unos pocos pasos simples. Los pasos a cont
   <Card
     title="Verlo en acción"
     icon="eye"
-    href="/guides/es/get-started/quickstart#test-the-rule"
+    href="/guides/es/get-started/quickstart#probar-la-regla"
   >
     Tus reglas se aplican automáticamente en el checkout.
   </Card>
