--- a/guides/es/get-started/quickstart.mdx
+++ b/guides/es/get-started/quickstart.mdx
@@ -72,7 +72,7 @@ Haz clic en **Reglas** en la barra lateral para ver todas las reglas. Selecciona
 <Warning>
   La activación de reglas solo está disponible en planes pagos. Si no has actualizado tu
   plan aún, sigue las instrucciones
-  [aquí](/guides/es/get-started/installation#upgrade-your-plan) para actualizar.
+  [aquí](/guides/es/get-started/installation#actualizar-tu-plan) para actualizar.
 </Warning>
 <img src="/images/shared/activate-the-rule.webp" alt="Activate The Rule" />
 
