--- a/guides/es/essentials/payment/reorder-payment-methods.mdx
+++ b/guides/es/essentials/payment/reorder-payment-methods.mdx
@@ -16,7 +16,7 @@ Los siguientes pasos muestran cómo crear y configurar una regla **Reordenar Mé
 
 ### Crear una nueva regla
 
-Desde tu [admin de Shopify](/guides/es/get-started/installation#go-to-the-app), abre la aplicación. En la barra lateral, ve a la sección [Reglas](/guides/es/get-started/quickstart#create-a-sample-rule) y haz clic en _"Crear Regla"_.
+Desde tu [admin de Shopify](/guides/es/get-started/installation#ir-a-la-aplicación), abre la aplicación. En la barra lateral, ve a la sección [Reglas](/guides/es/get-started/quickstart#crear-una-regla-de-ejemplo) y haz clic en _"Crear Regla"_.
 
 Luego, serás redirigido a la pantalla **Seleccionar tipo de regla de checkout**. Elige _categoría "Pago" → selecciona tipo de regla de checkout "Reordenar Métodos de Pago" → haz clic en "Seleccionar Regla"_.
 
@@ -36,7 +36,7 @@ A continuación, llegarás a la pantalla **Crear nueva regla de reordenar métod
 
 ### Configuración de regla
 
-Para configurar la regla, primero opcionalmente podemos añadir un nombre como "Reordenar métodos de pago" para describir lo que hace. Luego, selecciona el [estado](/guides/es/get-started/concepts#status) de la regla: Prueba, Activo o Desactivado.
+Para configurar la regla, primero opcionalmente podemos añadir un nombre como "Reordenar métodos de pago" para describir lo que hace. Luego, selecciona el [estado](/guides/es/get-started/concepts#estado) de la regla: Prueba, Activo o Desactivado.
 
 Aquí vamos a elegir el estado **Prueba**, para que podamos probar rápidamente la regla sin afectar el checkout para clientes reales.
 
@@ -45,7 +45,7 @@ Aquí vamos a elegir el estado **Prueba**, para que podamos probar rápidamente 
   alt="Rule Configure 1"
 />
 
-A continuación, en la misma pantalla, selecciona el [conjunto de condiciones](/guides/es/get-started/concepts#condition-set), [condición](/guides/es/get-started/concepts#conditions-when) y [acción](/guides/es/get-started/concepts#action-what) relevantes.
+A continuación, en la misma pantalla, selecciona el [conjunto de condiciones](/guides/es/get-started/concepts#conjunto-de-condiciones), [condición](/guides/es/get-started/concepts#condiciones-el-cuándo) y [acción](/guides/es/get-started/concepts#acción-el-qué) relevantes.
 
 > Como ejemplo, vamos a elegir el Conjunto de condiciones 1 predeterminado, configurar la regla para ejecutarse siempre, y seleccionar la operación **Orden alfabético** seleccionando **Nombre A a Z (Ascendente)** para reordenar los métodos de pago.
 
@@ -118,7 +118,7 @@ Haz clic en **Reglas** en la barra lateral para ver todas las reglas. Selecciona
 <Warning>
   La activación de reglas solo está disponible en planes pagos. Si no has actualizado tu
   plan aún, sigue las instrucciones
-  [aquí](/guides/es/get-started/installation#upgrade-your-plan) para actualizar.
+  [aquí](/guides/es/get-started/installation#actualizar-tu-plan) para actualizar.
 </Warning>
 <img
   src="/images/essentials/payment/activate-the-rule-reorder-payment-methods.webp"
